python-lib/prologin/concours/stechec/static/css/main.css
.dl-horizontal.dl-narrow dt {
    width: 4em;
}

@media (min-width: 768px) {
    .dl-horizontal.dl-narrow dd {
        margin-left: 5em;
    }
}

.nav-stacked > li + li {
    margin-top: 0;
}

.asteriskField {
    display: none;
}

textarea.monospace, input.monospace {
    font-family: monospace;
}

i.champ-status {
    width: 1.1em;
    text-align: center;
}

.text-ellipsis {
    overflow: hidden;
    -ms-text-overflow: ellipsis;
    text-overflow: ellipsis;
}

.official-map {
    color: gold;
}

